<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TmbActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewForm"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            style="@style/EditTextForm"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/edit_tmb_height"
            style="@style/EditTextForm"
            android:hint="@string/height" />

        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextForm"
            android:hint="@string/age" />
        
        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_tmb_send"
            style="@style/ButtonForm"
            android:text="@string/calc" />


    </LinearLayout>


</ScrollView>